--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <!-- Favicon y logos para diferentes dispositivos -->
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -21,11 +22,11 @@
       content="CineCollab: Collaborative movie watchlists and discovery"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/favicon.ico" />
+    <meta property="og:image" content="/favicon/favicon-96x96.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@cinecollab" />
-    <meta name="twitter:image" content="/public/favicon.ico" />
+    <meta name="twitter:image" content="/favicon/favicon-96x96.png" />
   </head>
 
   <body>
